apps/authority/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authority
  label:
    istio-injection: enabled
