apps/authority/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authority-service
  namespace: authority
spec:
  selector:
    app: authority
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
