apps/authority/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority-vs
  namespace: authority
spec:
  hosts:
  - "authority.cb-interview.com"
  gateways:
  - authority-gw
  http:
  - route:
    - destination:
        host: authority-service
